--- a/Slides/clase11-ridge-slides.tex
+++ b/Slides/clase11-ridge-slides.tex
@@ -6,6 +6,8 @@
 \usepackage{wrapfig}
 %\usepackage{siunitx}
 
+\usepackage{refcount}
+
 \usepackage{multicol}
 \usepackage{mathtools}
 
@@ -267,10 +269,282 @@ EXPO\_AGROP & EXPO\_PECUAR & EXPO\_AGRIC & EXPO\_CEREAL & EXPO\_OLEAGI & EXPO\_O
 %------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{?`C\'omo elegir entre distintos modelos?}
+\frametitle{Si hay colinealidad no hay unicidad}
 
+Cuando hay colinealidad, no podemos aplicar mínimos cuadrados directamente.
+El problema de mínimos cuadrados no tiene solución única.
+
+\textbf{Ejemplo:} si queremos modelar el PBI utilizando las variables de exportación, estás fórmulas son equivalentes.
+
+{\footnotesize
+\begin{itemize}
+\item PBI $\simeq$ EXPO\_PECUAR + EXPO\_AGRIC + ...
+\item PBI $\simeq$ EXPO\_AGROP + ... 
+\item PBI $\simeq$ EXPO\_PECUAR + EXPO\_CEREAL + EXPO\_OLEAGI + EXPO\_OTAGRIC  + ...
+\end{itemize}
+}
+\end{frame}
+
+\begin{frame}
+\frametitle{Explosión de coeficientes}
+
+Peor aún, podemos obtener fórmulas con coeficientes enormes. 
+
+Estas fórmulas también son equivalentes:
+\begin{itemize}
+\item $\text{PBI} \simeq \text{EXPO\_AGROP} + \cdots$
+\item $\text{PBI} \simeq 1001 \cdot \text{EXPO\_AGROP} - 500 \cdot \text{EXPO\_PECUAR} - 500 \cdot \text{EXPO\_AGRIC} + \cdots$
+\end{itemize}
+
+Estas fórmulas con coeficientes tan grandes van a traer problemas numéricos  y afectan severamente el modelo.
 
 \end{frame}
+
+\begin{frame}
+\frametitle{¿Cómo tratamos la colinealidad?}
+
+Existen diversos métodos para lidiar con la colinealidad. 
+
+En este ejemplo, la opción más simple sería eliminar variables redundantes (por ejemplo, EXPO\_AGROP y EXPO\_OTAGRIC).
+
+Existen también diversos métodos para detectar la colinealidad. Por ejemplo, podemos triangular la matriz por columnas.
+
+\end{frame}
+
+\begin{frame}
+\frametitle{¿Y cómo tratamos la ``casi colinealidad''?}
+
+Muchas veces la relación lineal no es exacta (por errores numéricos u otros motivos).
+Las variables pueden ser en teoría linealmente independientes pero en la práctica afectar igualmente el modelado.
+
+En estos casos, podemos usar métodos para reducción de dimensionalidad (disminuir la cantidad de variables sin perder mucha información).
+
+Alternativamente, podemos modificar el método de mínimos cuadrados para atacar la multicolinealidad.
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Solución única y explosión de coeficientes}
+
+Consideramos estos dos conjuntos de datos. Queremos explicar $y$ utilizando las variables $x$ como predictoras (sin intercept).
+
+\begin{table}[htbp]
+\centering
+\begin{minipage}{.5\textwidth}
+  \centering
+  \caption{$y = \beta_1 x_1$}
+  \begin{tabular}{cc}
+    \hline
+    \( y \) & \( x_1 \) \\
+    \hline
+    1 & 1.001 \\
+    0 & 0.001 \\
+    0 & 0.001 \\
+    \hline
+  \end{tabular}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \caption{$y = \beta_1 x_1 + \beta_2 x_2$}
+  \begin{tabular}{ccc}
+    \hline
+    \( y \) & \( x_1 \) & \( x_2 \) \\
+    \hline
+    1 & 1.001 & 1.000 \\
+    0 & 0.001 & 0.001 \\
+    0 & 0.001 & 0.001 \\
+    \hline
+  \end{tabular}
+\end{minipage}
+\end{table}
+
+\begin{enumerate}
+\item En el primer caso, ¿hay solución exacta? ¿Cuál esperan que sea la solución de mínimos cuadrados?
+\item En el segundo caso, las variables $x_1$ y $x_2$ ¿son linealmente independientes?
+\item ¿Hay solución exacta en este caso? ¿Cuáles son los coeficientes de la solución?
+\end{enumerate}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Respuestas}
+
+\begin{enumerate}
+\item No hay solución exacta. La solución de mínimos cuadrados es $\beta_1 = 0.999998$.
+\item Las variables $x_1$ y $x_2$ son linealmente independientes.
+\item Este sistema tiene solución exacta: $y = 1000 x_1 - 1000 x_2$.
+\end{enumerate}
+
+Si bien en el segundo modelo el error en entrenamiento es menor (porque la solución es exacta), un modelo con coeficientes tan grandes generalmente va a funcionar mal, va a tener menor capacidad predictiva.
+
+Podemos pensar el segundo modelo como un caso de sobreajuste. 
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Solución: mínimos cuadrados regularizados}
+
+Para evitar el problema del ejemplo anterior, queremos construir un modelo donde los coeficientes sean pequeños, o lo más chicos posibles.
+
+Es decir, queremos dos cosas:
+\begin{itemize}
+\item Que los errores del modelo sean lo más chicos posibles.
+\item Que los coeficientes del modelo sean lo más chicos posibles
+\end{itemize}
+
+Podemos pensar la segunda condición como \emph{buscar un modelo lo más simple posible}.
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Solución: penalizamos a los modelos complicados}
+
+Como el problema de mínimos cuadrados en general tiene solución única, podemos minimizar una de las dos cosas, pero no las dos a la vez. 
+
+\textbf{Penalidades.} La solución común cuando queremos minimizar varias cosas a la vez es introducir penalidades. 
+ 
+En este caso, queremos agregar al problema de mínimos cuadrados una penalidad cuando los errores son grandes.
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Función de pérdida}
+
+\textbf{Función de pérdida.} Queremos definir una función de pérdida del estilo
+$$L = \text{error cuadrático medio del ajuste} + \alpha \cdot \ \text{tamaño de los coeficientes}$$
+para algún parámetro $\alpha$ apropiado de penalidad. $\alpha$ es el \emph{peso} que le damos a la penalidad en el modelo.
+
+\textbf{Intuitivamente,} entre dos modelos que ajustan bien, elegimos el que tiene coeficientes más chicos.
+\end{frame}
+
+\begin{frame}
+\frametitle{Formulación matemática}
+
+El error cuadrático del modelo se calcula por la fórmula:
+$$
+EC = (y_1 - \hat y_1)^2 + (y_2 - \hat y_2)^2 + \dots + (y_m - \hat y_m)^2,
+$$
+donde $y_i$ son los valores reales e $\hat y_i$ son las predicciones del modelo.
+
+Comparamos esta fórmula con la norma al cuadrado  de un vector:
+$$
+\|v\|^2 = \|(v_1, \dots, v_m)\|^2 = v_1^2 + v_2^2 + \dots + v_m^2
+$$
+
+Observamos que 
+$$EC = \|(y_1 - \hat y_1, y_2 - \hat y_2, \dots, y_m - \hat y_m)\|^2 = \|y - \hat y\|^2.$$
+
+Por lo tanto:
+\begin{block}{}
+\centering
+Minimizar el error cuadrático es equivalente a minimizar $\|y - \hat y\|^2$.
+\end{block}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Formulación matemática}
+
+A la vez, podemos medir el tamaño de los coeficientes por la norma al cuadrado del vector de coeficientes:
+$$
+\beta_1^2 + \beta_2^2 + \dots + \beta_n^2 = \|(\beta_1, \beta_2, \dots, \beta_n)\|^2
+$$
+
+Si ahora juntamos las dos fórmulas, obtenemos una función de pérdida:
+\begin{align*}
+L &= \text{error cuadrático medio del modelo} + \alpha \cdot \text{ tamaños de los coeficientes} \\
+&= \|y - \hat y\|^2 + \alpha \|\beta\|^2
+\end{align*}
+
+Es decir, queremos que tanto la norma del vector de errores como la norma del vector de coeficientes sean pequeños.
+\end{frame}
+
+\begin{frame}
+\frametitle{Formulación matemática}
+
+Obtenemos así el método conocido como \emph{regresión de Ridge} (o mínimos cuadrados regularizados o regulizarción $L_2$ o regularización de Tychonov). 
+
+Es un método muy común y utilizado en diversas áreas, por eso los diversos nombres.
+
+La función de pérdida es 
+$$
+L = \|y - \hat y\|_2^2 + \alpha \|\beta\|_2^2
+$$
+para un parámetro $\alpha$ a determinar.
+
+\end{frame}
+
+\begin{frame}
+\frametitle{El milagro de los mínimos cuadrados regularizados}
+
+Ya mencionamos que el problema de mínimos cuadrados puede resolverse fácilmente utilizando álgebra lineal.
+
+El problema de mínimos cuadrados regularizados parece mucho más complicado.
+
+Milagrosamente, este problema también puede resolverse fácilmente  utilizando álgebra lineal.
+
+Dado un sistema de ecuaciones $X \beta = y$, para hallar el vector $\beta$ que minimiza 
+$$L = \|y - \hat y\|_2^2 + \alpha \|\beta\|_2^2$$ 
+resolvemos el sistema lineal
+$$
+\left(X^{\mathsf {T}}X+ \alpha I\right) \beta = X^{\mathsf {T}}{y}.
+$$
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Parámetros e hiperparámetros}
+
+\textbf{Parámetros.} En el modelo lineal, una vez que fijamos una fórmula $y = \beta_0 + \beta_1 x_1 + \dots + \beta_n x_n$, calculamos los valores óptimos de $\beta_0, \dots, \beta_n$ entrenando el modelo en los datos de entrenamiento.
+
+Los coeficientes $\beta_0, \dots, \beta_n$ se denominan \emph{parámetros} del modelo.
+
+\textbf{Hiperparámetros.} En el modelo lineal regularizado, debemos fijar primero un valor de $\alpha$ y luego podemos calcular los valores óptimos de $\beta_0, \dots, \beta_n$ entrenando el modelo en los datos de entrenamiento. En este caso $\alpha$ se denomina un \emph{hiperparámetro} del modelo.
+
+Los hiperparámetros no aprenden su valor de los datos, sino que debemos especificarlos ``manualmente''.
+\end{frame}
+
+\begin{frame}
+\frametitle{¿Cómo elegimos un valor apropiado para el hiperparámetro $\alpha$?}
+
+Una forma usual para elegir el valor del hiperparámetro es por validación cruzada en $k$ pliegos.
+
+Realizamos los siguientes pasos:
+
+\begin{enumerate}
+\item \textbf{Preparación de datos}: Dividimos los datos en conjunto de entrenamiento y conjunto de testeo. 
+
+\item \textbf{Selección de parámetros}: Definimos un vector de posibles valores para el hiperparámetro $\alpha$. 
+
+\item \textbf{Ajuste del modelo}: Para cada valor de $\alpha$, ajustamos un modelo de Ridge utilizando los datos de entrenamiento y calculamos su rendimiento utilizando validación cruzada.
+\label{end-enumerate}% Save counter at end of enumerate    
+\end{enumerate}
+\end{frame}
+
+\begin{frame}
+\frametitle{¿Cómo elegimos un valor apropiado para el hiperparámetro $\alpha$?}
+
+\begin{enumerate}
+\setcounterref{enumi}{end-enumerate}
+\item \textbf{Validación cruzada}: Los datos de entrenamiento se dividen en $k$ pliegues (folds), y el modelo se entrena $k$ veces, cada vez utilizando $k-1$ pliegues para el entrenamiento y el pliegue restante para la validación. Este proceso se repite $k$ veces, de manera que cada pliegue se utiliza una vez como conjunto de validación. El error del modelo se promedia sobre las $k$ iteraciones.
+
+\item \textbf{Selección del mejor valor de $\alpha$}: Seleccionamos el valor de $\alpha$ que minimiza el promedio de los errores en las $k$ iteraciones. 
+    
+\item \textbf{Entrenamiento final}: Una vez que seleccionamos el mejor valor de $\alpha$, ajustamos un modelo final de Ridge utilizando todos los datos de entrenamiento y este valor de $\alpha$.
+
+\item \textbf{Evaluación final}: Evaluamos el modelo final utilizando el conjunto de prueba reservado anteriormente para obtener una estimación imparcial de su rendimiento en datos no vistos.
+\end{enumerate}
+\end{frame}
+
+
+
+
+
+
 
 
 \end{document}
