Actualiza el notebook de la clase 7 agregando como hacer regresion con polinomiops con formulaic

--- a/Notebooks/clase7-ldd-cuadradosminimos.ipynb
+++ b/Notebooks/clase7-ldd-cuadradosminimos.ipynb
@@ -14,7 +14,9 @@
     "\n",
     "from sklearn import linear_model    # Herramientas de modelos lineales\n",
     "from sklearn.preprocessing import PolynomialFeatures    # Herramientas de polinomios\n",
-    "from sklearn.metrics import mean_squared_error, r2_score    # Medidas de desempeño"
+    "from sklearn.metrics import mean_squared_error, r2_score    # Medidas de desempeño\n",
+    "\n",
+    "from formulaic import Formula"
    ]
   },
   {
@@ -355,6 +357,62 @@
     "# Calculando el ECM\n",
     "ecm = mean_squared_error(datos_arg['gdpPercap'], y_pred)\n",
     "print('ECM: ', ecm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f03c920-a998-44ab-b29b-b29af9db94ec",
+   "metadata": {},
+   "source": [
+    "### Nuevo: usando `formulaic`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75892673-6e13-4c92-a217-44f8419d09bb",
+   "metadata": {},
+   "source": [
+    "Con `formulaic` podemos usar `poly` en la formula, especificando el grado del polinomio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28d9a73f-8e0b-4771-aad9-4a3a3ec89648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y, X = Formula('gdpPercap ~ poly(year, 3)').get_model_matrix(datos_arg)   # el 3 corresponde a que queremos un polinomio de grado 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f9ad1d4-a754-4f07-8f80-307229f642c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inicializamos el modelo de regresión. \n",
+    "modelo = linear_model.LinearRegression(fit_intercept=False) # RECORDAR USAR fit_intercept = False\n",
+    "\n",
+    "# Realiza el ajuste\n",
+    "modelo.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "936982be-e3d2-4526-ace7-365a5b1c27de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lo que obtuvimos coincide con lo que calcula PolyFit de seaborn objects\n",
+    "(\n",
+    "    so.Plot(data=datos_arg, x='year', y='gdpPercap')\n",
+    "    .add(so.Dot())\n",
+    "    .add(so.Line(), x='year', y=modelo.predict(X).flatten(), label='Formulaic')\n",
+    "    .add(so.Line(color='red', linestyle='--'), so.PolyFit(3), label='Seaborn')\n",
+    ")"
    ]
   }
  ],
